unpackaged/objects/copado__Event__e.object
<CustomObject>
	<fields>
		<fullName>copado__Payload__c</fullName>
		<label>Payload</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Publisher_Code__c</fullName>
		<label>Publisher Code</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Topic_Uri__c</fullName>
		<label>Topic Uri</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Copado Event</label>
	<pluralLabel>Copado Events</pluralLabel>
</CustomObject>